; ModuleID = '/home/carl/AnghaBench/libgit2/tests/path/extr_dotgit.c_test_path_dotgit__dotgit_modules_symlink.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/path/extr_dotgit.c_test_path_dotgit__dotgit_modules_symlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c".gitmodules\00", align 1
@GIT_PATH_REJECT_DOT_GIT_HFS = common dso_local global i32 0, align 4
@GIT_PATH_REJECT_DOT_GIT_NTFS = common dso_local global i32 0, align 4
@S_IFLNK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_path_dotgit__dotgit_modules_symlink() #0 {
  %1 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_HFS, align 4
  %2 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_NTFS, align 4
  %3 = or i32 %1, %2
  %4 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 0, i32 %3)
  %5 = call i32 @cl_assert_equal_b(i32 1, i32 %4)
  %6 = load i32, i32* @S_IFLNK, align 4
  %7 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_HFS, align 4
  %8 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %7)
  %9 = call i32 @cl_assert_equal_b(i32 0, i32 %8)
  %10 = load i32, i32* @S_IFLNK, align 4
  %11 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_NTFS, align 4
  %12 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %11)
  %13 = call i32 @cl_assert_equal_b(i32 0, i32 %12)
  ret void
}

declare dso_local i32 @cl_assert_equal_b(i32, i32) #1

declare dso_local i32 @git_path_isvalid(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
